[project]
name = "nomad-distribution"
description = "nomad distribution template"
version = "0.1"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "nomad-lab[infrastructure]>=1.3.10",
  "perovskite-solar-cell-database",
  'nomad-porous-materials; sys_platform != "win32"',
  "nomad-aitoolkit",
  "nomad-simulations>=0.3.2",
  "pynxtools[apm,ellips,mpes,raman,xps,xrd]>=0.10.0",
  "nomad-schema-plugin-run>=1.0.1",
  "nomad-normalizer-plugin-dos>=1.0",
  "nomad-normalizer-plugin-soap>=1.0",
  "nomad-normalizer-plugin-spectra>=1.0",
  "nomad-normalizer-plugin-system>=1.0",
  "nomad-parser-plugins-electronic>=1.0",
  "nomad-parser-plugins-atomistic>=1.0.6",
  "nomad-parser-plugins-database>=1.0",
  "nomad-external-eln-integrations",
  "nomad-dtu-nanolab-plugin",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
nomad-lab = { workspace = true }
nomad-dtu-nanolab-plugin = { workspace = true }

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
dev-dependencies = [
  "nomad-lab[parsing, infrastructure, dev]>=1.3.4",
  "poethepoet>=0.29.0",
]

override-dependencies = [
    'python-magic-bin; sys_platform=="win32"',
    'python-magic; sys_platform == "never"',
]
required-version = ">=0.5.14"
constraint-dependencies = ["flatdict>=4.1.0", "hyperspy>=1.7.6"]

[dependency-groups]
dev = ["nomad-lab[infrastructure, dev]>=1.3.4", "poethepoet>=0.29.0"]

[tool.poe.tasks]
submodule = "git submodule update --init --recursive"
docker = "docker compose up -d"
setup = ["gui-env", "gui-setup", "docker", "config"]
lint = ["ruff-lint", "ruff-format"]

[tool.poe.tasks.start]
cmd = "nomad admin run appworker --dev"
env = { NOMAD_SERVICES_MODE = "development" }

[tool.poe.tasks.cpuworker]
cmd = "nomad admin run action-cpu-worker"
env = { NOMAD_SERVICES_MODE = "development" }

[tool.poe.tasks.gpuworker]
cmd = "nomad admin run action-gpu-worker"
env = { NOMAD_SERVICES_MODE = "development" }

[tool.poe.tasks.config]
shell = """
import os;
if not os.path.exists("nomad.yaml"):
    with open("nomad.yaml", "w") as f:
        f.write("keycloak:\\n  realm_name: \\"fairdi_nomad_test\\"\\n")
"""
interpreter = "python"

[tool.poe.tasks.gui-env]
cmd = "python -W ignore -m nomad.cli dev gui-env"
capture_stdout = "packages/nomad-FAIR/gui/.env.development"

[tool.poe.tasks.docs]
cmd = "mkdocs serve"
cwd = "packages/nomad-docs"

[tool.poe.tasks.ruff-lint]
cmd = "ruff check ."

[tool.poe.tasks.ruff-format]
cmd = "ruff format . --check"

[tool.poe.tasks.hub]
cmd = "nomad admin run hub"
cwd = "packages/nomad-FAIR"

[tool.poe.tasks.gui]
cmd = '"C:/Program Files (x86)/Yarn/bin/yarn.cmd" run'
cwd = "packages/nomad-FAIR/gui"
env = { NODE_EXE = "C:/Users/eugbe/nodejs/node-v20.19.4-win-x86/node.exe" }

[tool.poe.tasks.gui-setup]
cmd = '"C:/Program Files (x86)/Yarn/bin/yarn.cmd"'
cwd = "packages/nomad-FAIR/gui"
env = { NODE_EXE = "C:/Users/eugbe/nodejs/node-v20.19.4-win-x86/node.exe" }

[tool.poe.tasks.gen-gui-test-env]
cmd = "python -W ignore -m nomad.cli dev gui-config"
capture_stdout = "packages/nomad-FAIR/gui/tests/env.js"
env = { NOMAD_CONFIG = "packages/nomad-FAIR/gui/tests/nomad.yaml" }

[tool.poe.tasks.gen-nomad-lock]
cmd = "uv pip compile -U --universal -p 3.11 --extra infrastructure --extra dev --annotation-style=line pyproject.toml requirements.txt"
capture_stdout = "packages/nomad-FAIR/requirements-dev.txt"
cwd = "packages/nomad-FAIR"
deps = ["gen-nomad-lock-without-dev"]

[tool.poe.tasks.gen-nomad-lock-without-dev]
cmd = "uv pip compile -U --universal -p 3.11 --extra infrastructure --annotation-style=line pyproject.toml"
cwd = "packages/nomad-FAIR"
capture_stdout = "packages/nomad-FAIR/requirements.txt"
